--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "note-taker",
   "version": "1.0.0",
@@ -9,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4"
   }
 }
+
+
